--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<1>sus i kuy</1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=
+  , initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  
+  <img src="SaveTik.co_7603587093373160712_3.jpeg" width="300">
+  <img src="Messenger_creation_E5989169-DA8E-4A2E-8602-6CB692B9A42C.jpeg" width="300">
+  <h1>my fried</h1>
+</body>
+</html>
