Set body background color to red
Added a red background color to the body.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   
+  <body style="background-color:red;">
+  
   <img src="SaveTik.co_7603587093373160712_3.jpeg" width="300">
   <img src="Messenger_creation_E5989169-DA8E-4A2E-8602-6CB692B9A42C.jpeg" width="300">
   <h1>my fried</h1>
