--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body style="background-color:black;">
   <div style="text-align:center;">
     <img src="SaveTik.co_7603587093373160712_3.jpeg"
-    <img src="Messenger_creation_E5989169-DA8E-4A2E-8602-6CB692B9A42C.jpeg"
-    
-    
   </div>
   
+  <div style="test-align:center">
+    <img src="Messenger_creation_E5989169-DA8E-4A2E-8602-6CB692B9A42C.jpeg"
+  </div>
   <h1>my fried</h1>
 </body>
 </html>
